CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.17

	- The LPD backend now sends the job title as the print
	  filename.
	- Added support for variable sizes in the EPSON dot
	  matrix printer drivers.  This allows for pages as
	  short as 1/2" (1 row of labels) and does not do an
	  automatic form feed.
	- French translation updates.
	- The filters did not quote the page label string when
	  embedding it in PostScript output.
	- The serial backend now enumerates serial ports under
	  MacOS X.
	- The pdftops filter contained font rasterizer code that
	  wasn't being used and that depended on X11.  This code
	  has been removed.


CHANGES IN CUPS V1.1.16

	- The cancel and lprm commands now both display an error
	  message and return a non-zero exit status if an
	  attempt is made to cancel a job on a non-existent
	  printer.
	- The lpoptions command incorrectly complained if a
	  request to delete a non-existent printer was made.
	- If the client.conf file defines an alternate server
	  name, the "configure printer" action in the web
	  interface might not work.
	- The lpstat command now supports a "-W" option so that
	  you can display completed jobs as well as
	  not-completed (pending) jobs.
	- The lp and lpr commands did not return an error when
	  one or more files in a set of files for printing could
	  not be printed.
	- The lp, lpadmin, and lpstat commands now consistently
	  return with a non-zero exit status when an error
	  occurs.
	- The scheduler would not accept print jobs sent to a
	  stopped remote printer.
	- The texttops filter incorrectly converted the page
	  numbers in the prettyprint header to double-byte
	  characters when printing a non-Unicode text file. This
	  caused an extra space to appear between each digit in
	  the page number.
	- The scheduler did not use a case-insensitive
	  comparison when adding filters for a printer.
	- Upgraded the pdftops filter to Xpdf 1.01.
	- The scheduler no longer passes the page-border and