@@ -1,5 +1,5 @@
 /*
- * "$Id: classes.c,v 1.34.2.6 2002/05/16 14:00:07 mike Exp $"
+ * "$Id: classes.c,v 1.34.2.7 2002/10/15 16:19:55 mike Exp $"
  *
  *   Printer class routines for the Common UNIX Printing System (CUPS).
  *
@@ -62,6 +62,7 @@ AddClass(const char *name)	/* I - Name of class */
     */
 
     c->type = CUPS_PRINTER_CLASS;
+
 #ifdef AF_INET6
     if (Listeners[0].address.addr.sa_family == AF_INET6)
       snprintf(c->uri, sizeof(c->uri), "ipp://%s:%d/classes/%s", ServerName,
@@ -70,12 +71,6 @@ AddClass(const char *name)	/* I - Name of class */
 #endif /* AF_INET6 */
     snprintf(c->uri, sizeof(c->uri), "ipp://%s:%d/classes/%s", ServerName,
              ntohs(Listeners[0].address.ipv4.sin_port), name);
-
-   /*
-    * Set the printer attributes to make this a class.
-    */
-
-    SetPrinterAttrs(c);
   }
 
   return (c);
@@ -347,7 +342,11 @@ LoadAllClasses(void)
 
   snprintf(line, sizeof(line), "%s/classes.conf", ServerRoot);
   if ((fp = fopen(line, "r")) == NULL)
+  {
+    LogMessage(L_ERROR, "LoadAllClasses: Unable to open %s - %s", line,
+               strerror(errno));
     return;
+  }
 
  /*
   * Read class configurations until we hit EOF...
@@ -410,6 +409,8 @@ LoadAllClasses(void)
       if (line[len - 1] == '>' && p == NULL)
       {
         line[len - 1] = '\0';
+
+        LogMessage(L_DEBUG, "LoadAllClasses: Loading class %s...", value);
 
         p = AddClass(value);
 	p->accepting = 1;
@@ -656,5 +657,5 @@ SaveAllClasses(void)
 
 
 /*
- * End of "$Id: classes.c,v 1.34.2.6 2002/05/16 14:00:07 mike Exp $".
+ * End of "$Id: classes.c,v 1.34.2.7 2002/10/15 16:19:55 mike Exp $".
  */
